# tachiyomi-backup-to-anilist

./: .gitignore  Cargo.toml  build.rs
assets/: schema.proto
src/: anilist.rs  lib.rs  macros.rs  main.rs  responses.rs  tachiyomi_backup.rs
