[package]
name = "tachiyomi-backup-to-anilist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
libflate = "2.0.0"
prost = "0.12"
prost-types = "0.12"
ureq = { version = "2.9.1", features = ["json", "cookies"] }

[build-dependencies]
prost-build = "0.12.3"
